Move shaders to shader folder

--- a/drivers/vulkan/CMakeLists.txt
+++ b/drivers/vulkan/CMakeLists.txt
@@ -6,3 +6,14 @@ target_link_libraries(vulkan_context PRIVATE $<TARGET_NAME_IF_EXISTS:SDL2::SDL2m
 target_link_libraries(vulkan_context PRIVATE Vulkan::Vulkan)
 
 target_link_libraries(vulkan_context PRIVATE debugger)
+
+#file(COPY shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+set(SHADER_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
+set(SHADER_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")
+
+add_custom_command(
+    TARGET vulkan_context POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${SHADER_SOURCE_DIR} ${SHADER_BINARY_DIR}
+    COMMENT "Copying shaders to build directory"
+)
