Add basic texturing

--- a/drivers/vulkan/CMakeLists.txt
+++ b/drivers/vulkan/CMakeLists.txt
@@ -8,8 +8,8 @@ target_link_libraries(vulkan_context PRIVATE Vulkan::Vulkan)
 target_link_libraries(ApeEscapeRemake PRIVATE glm::glm)
 
 target_link_libraries(vulkan_context PRIVATE debugger)
+target_link_libraries(vulkan_context PRIVATE stb_image)
 
-#file(COPY shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 set(SHADER_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/shaders")
 set(SHADER_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/shaders")
 
@@ -18,3 +18,14 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${SHADER_SOURCE_DIR} ${SHADER_BINARY_DIR}
 )
+
+set(TEXTURE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets/")
+set(TEXTURE_BINARY_DIR "${CMAKE_BINARY_DIR}/assets/")
+
+add_custom_command(TARGET vulkan_context POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${TEXTURE_SOURCE_DIR} ${TEXTURE_BINARY_DIR}
+)
+
+set(ASSET_PATH "${CMAKE_BINARY_DIR}/assets")
+add_definitions(-DASSET_PATH="${ASSET_PATH}")
